tests/typing/good/testfile-type_parameter-1.scala
class A {}
class B[A] {}
object Main { def main(args: Array[String]) { } }
