tests/typing/bad/testfile-unbound_class2-1.scala
class A { var b: B = null }
object Main { def main(args: Array[String]) { } }
